--- a/tutorial/notebooks/fparser2/parsing_fortran.ipynb
+++ b/tutorial/notebooks/fparser2/parsing_fortran.ipynb
@@ -11,19 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example shows how PSyclone reads existing Fortran code using a parser called fparser2."
+    "This example shows how PSyclone reads existing Fortran code using a parser called fparser2 (https://pypi.org/project/fparser/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let's specify a simple Fortran code in a Python string. PSyclone typically reads codes from files but it is easier to demonstrate what is happening using a string."
+    "First let's specify a simple Fortran code in a Python string. PSyclone typically reads code from file but it is easier to demonstrate what is happening here using a string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PSyclone parses this code using a Fortran parser called fparser2 (see https://fparser.readthedocs.io/en/stable/ if you are interested). Notice that we choose the Fortran2003 standard (`std=f2003`) below. It is also possible to choose Fortran 2008 (std=`f2008`), however newer standards are not yet available in fparser2."
+    "PSyclone parses this code using a Fortran parser called fparser2 (see https://fparser.readthedocs.io/en/stable/ if you are interested). Notice that we choose the Fortran2003 standard (`std=f2003`) below. It is also possible to choose Fortran 2008 (`std=f2008`), however newer standards are not yet available in fparser2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRAM test\n",
+      "  IMPLICIT NONE\n",
+      "  INTEGER, PARAMETER :: ni = 10, nj = 10, nk = 10\n",
+      "  REAL, DIMENSION(ni, nj, nk) :: a, b\n",
+      "  INTEGER :: i, j, k\n",
+      "  DO k = 1, nk\n",
+      "    DO j = 1, nj\n",
+      "      DO i = 1, ni\n",
+      "        a(i, j, k) = b(i, j, k)\n",
+      "      END DO\n",
+      "    END DO\n",
+      "  END DO\n",
+      "END PROGRAM test\n"
+     ]
+    }
+   ],
    "source": [
     "print(str(parse_tree))"
    ]
@@ -87,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program(Main_Program(Program_Stmt('PROGRAM', Name('test')), Specification_Part(Implicit_Part(Implicit_Stmt('NONE')), Type_Declaration_Stmt(Intrinsic_Type_Spec('INTEGER', None), Attr_Spec_List(',', (Attr_Spec('PARAMETER'),)), Entity_Decl_List(',', (Entity_Decl(Name('ni'), None, None, Initialization('=', Int_Literal_Constant('10', None))), Entity_Decl(Name('nj'), None, None, Initialization('=', Int_Literal_Constant('10', None))), Entity_Decl(Name('nk'), None, None, Initialization('=', Int_Literal_Constant('10', None)))))), Type_Declaration_Stmt(Intrinsic_Type_Spec('REAL', None), Attr_Spec_List(',', (Dimension_Attr_Spec('DIMENSION', Explicit_Shape_Spec_List(',', (Explicit_Shape_Spec(None, Name('ni')), Explicit_Shape_Spec(None, Name('nj')), Explicit_Shape_Spec(None, Name('nk'))))),)), Entity_Decl_List(',', (Entity_Decl(Name('a'), None, None, None), Entity_Decl(Name('b'), None, None, None)))), Type_Declaration_Stmt(Intrinsic_Type_Spec('INTEGER', None), None, Entity_Decl_List(',', (Entity_Decl(Name('i'), None, None, None), Entity_Decl(Name('j'), None, None, None), Entity_Decl(Name('k'), None, None, None))))), Execution_Part(Block_Nonlabel_Do_Construct(Nonlabel_Do_Stmt('DO', Loop_Control(None, (Name('k'), [Int_Literal_Constant('1', None), Name('nk')]), None)), Block_Nonlabel_Do_Construct(Nonlabel_Do_Stmt('DO', Loop_Control(None, (Name('j'), [Int_Literal_Constant('1', None), Name('nj')]), None)), Block_Nonlabel_Do_Construct(Nonlabel_Do_Stmt('DO', Loop_Control(None, (Name('i'), [Int_Literal_Constant('1', None), Name('ni')]), None)), Assignment_Stmt(Part_Ref(Name('a'), Section_Subscript_List(',', (Name('i'), Name('j'), Name('k')))), '=', Part_Ref(Name('b'), Section_Subscript_List(',', (Name('i'), Name('j'), Name('k'))))), End_Do_Stmt('DO', None)), End_Do_Stmt('DO', None)), End_Do_Stmt('DO', None))), End_Program_Stmt('PROGRAM', Name('test'))))\n"
+     ]
+    }
+   ],
    "source": [
     "print(repr(parse_tree))"
    ]
@@ -98,19 +126,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, why do we use fparser2 in PSyclone? The main reason is that it makes it very easy to extract information about the code in a robust way. Originally the code was stored as a string, now it is stored in a structured way. For example, if we want to get access to all the assignment statements ..."
+    "So, why do we use fparser2 in PSyclone? The main reason is that it makes it very easy to extract information about the code in a robust way. Originally the code was stored as a string, now it is stored in a structured way. For example, if we want to get access to all the assignment statements then we can use the `walk` utility (https://fparser.readthedocs.io/en/latest/fparser2.html#fparser.two.utils.walk)..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a(i, j, k) = b(i, j, k)\n"
+     ]
+    }
+   ],
    "source": [
     "from fparser.two.utils import walk\n",
-    "from fparser.two.Fortran2003 import Assignment_Stmt\n",
-    "for node in walk(parse_tree, Assignment_Stmt):\n",
-    "    print(node)"
+    "from fparser.two import Fortran2003\n",
+    "assignments = walk(parse_tree, Fortran2003.Assignment_Stmt)\n",
+    "assign = assignments[0]\n",
+    "print(assign)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every node in the fparser2 parse tree has the `parent` and `children` properties to help with tree navigation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Part_Ref(Name('a'), Section_Subscript_List(',', (Name('i'), Name('j'), Name('k')))), '=', Part_Ref(Name('b'), Section_Subscript_List(',', (Name('i'), Name('j'), Name('k')))))\n",
+      "a(i, j, k) = b(i, j, k)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(assign.children)\n",
+    "print(assign.children[0].parent)"
    ]
   },
   {
@@ -122,13 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRAM test\n",
+      "  IMPLICIT NONE\n",
+      "  INTEGER, PARAMETER :: ni = 20, nj = 20, nk = 20\n",
+      "  REAL, DIMENSION(ni, nj, nk) :: a, b\n",
+      "  INTEGER :: i, j, k\n",
+      "  DO k = 20, nk\n",
+      "    DO j = 20, nj\n",
+      "      DO i = 20, ni\n",
+      "        a(i, j, k) = b(i, j, k)\n",
+      "      END DO\n",
+      "    END DO\n",
+      "  END DO\n",
+      "END PROGRAM test\n"
+     ]
+    }
+   ],
    "source": [
-    "from fparser.two.utils import walk\n",
-    "from fparser.two.Fortran2003 import Int_Literal_Constant\n",
-    "for node in walk(parse_tree, Int_Literal_Constant):\n",
+    "for node in walk(parse_tree, Fortran2003.Int_Literal_Constant):\n",
     "    children = list(node.items)\n",
     "    children[0] = \"20\"\n",
     "    node.items = tuple(children)\n",
@@ -139,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you would like to try something yourself why not try to print out all of the  `do` statements. Hint: follow the approach taken for printing assignment statements."
+    "If you would like to try something yourself why not try to print out all of the  `do` statements. Hint: see the `repr` output to find the name of the `do` node and then follow the approach taken for printing assignment statements."
    ]
   },
   {
@@ -160,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
