--- a/tutorial/notebooks/introduction.ipynb
+++ b/tutorial/notebooks/introduction.ipynb
@@ -11,27 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PSyclone is a code generation and transformation system developed to support domain-specific languages (DSLs) for finite element, finite volume and finite difference codes, particularly in the Weather and Climate domain (but could be used for codes in other domains with similar characteristics).\n",
+    "PSyclone is a tool for achieving performance portability through the use of code generation and transformation. It has been developed to support finite element, finite volume and finite difference codes, particularly in the Weather and Climate domain (but could be used for codes in other domains with similar characteristics).\n",
     "\n",
+    "There are two different ways in which PSyclone may be used:\n",
+    "\n",
+    "1. to transform existing code, and;\n",
+    "2. as a compiler (code generator) for a model written in a supported Domain-Specific Language.\n",
+    "\n",
+    "In the first mode, PSyclone works with existing model code written in Fortran while in the second, the model\n",
+    "must be written in a Domain-Specific Language (DSL) embedded in Fortran.\n",
     "DSLs are a potential solution to the problem of supporting the scientific development of complex codes that must achieve high performance on a range of different high performance computers. The way in which DSLs achieve this is to separate the science code from its parallelisation and optimisation. This separation allows for single source science codes (which helps with scientific productivity) that can run efficiently (performance) on different HPC architectures (portability).\n",
     "\n",
     "PSyclone does not support a single DSL, rather it can be configured to support different DSL front ends (called APIs in PSyclone). For example, the finite element domain deals with concepts such as function spaces and basis functions whereas the finite difference domain deals with concepts such as Arakawa grids and grid-point types. Therefore the DSLs for these different domains will also differ.\n",
     "\n",
-    "Three APIs are currently supported in PSyclone. These are called lfric (which was previously named dynamo0.3), gocean1.0 and nemo.\n",
+    "Three APIs are currently supported in PSyclone. These are called \"nemo\", \"lfric\" (which was previously named \"dynamo0.3\") and \"gocean1.0\".\n",
+    "\n",
+    "* nemo supports 3D, structured finite-difference codes. As its name suggests, it was initially developed to support the NEMO ocean model but it is now also being used in work with the NEMOVAR, CROCO and ROMS codes.\n",
     "\n",
     "* lfric supports mixed, finite-element codes and is used in the LFRic Project, which is developing the Met Office's next generation weather and climate model.\n",
     "\n",
     "* gocean1.0 supports 2D, structured finite-difference codes. It is more of a development API but has been demonstrated in the MOST Tsunami code.\n",
     "\n",
-    "* nemo supports 3D, structured finite-difference codes. As its name suggests, it is being developed to support the NEMO ocean model but has also been demonstrated in the ROMS ocean model.\n",
     "\n",
-    "All three APIs take Fortran code as input and can produce optimised parallel code as output. The input Fortran code is parsed using fparser2 and then a language-independent description of the code to be generated is constructed in the PSyclone Internal Representation ('PSyIR'). It is the PSyIR that is manipulated in order to optimise the code\n",
+    "All three APIs take Fortran code as input and can produce optimised parallel code as output. The input Fortran code is parsed using the fparser2 parser (a lightweight parser implemented in Python) and then a language-independent description of the code to be generated is constructed in the PSyclone Internal Representation (PSyIR). It is the PSyIR that is manipulated in order to optimise the code\n",
     "that will be generated for a particular architecture - this is demonstrated in the NEMO part of this tutorial.\n",
+    "\n",
+    "For the nemo API, the input is existing, unmodified Fortran code. The reason for taking this approach is that there are many exising models (of which NEMO is one) where the science developers do not want to radically alter their code but wish to be able to make use of new developments in computing hardware which often means using new programming models (such as OpenACC or OpenMP). However, as one might expect, there are limitations. In particular the NEMO code already contains MPI parallel code (halo exchange calls etc) so PSyclone currently deals with the single node (i.e multi-core and/or accelerator) performance. This approach is explained in more detail in the NEMO section of the tutorial.\n",
     "\n",
     "In the lfric and gocean1.0 APIs, the Fortran code must be written in a particular form.\n",
     "PSyclone was originally developed to support the concept of 3 separate layers; an Algorithm layer that calls a PSy layer which in turn calls a Kernel layer. This approach has been termed `PSyKAl`. The Algorithm and Kernel layers are written by scientists and the PSy layer is generated by PSyclone and contains any parallel code (both distributed and shared memory). In addition the Kernel layer can also be transformed by PSyclone. The Algorithm layer specifies which kernels should be called in regions of code called 'invoke's. For each invoke PSyclone creates PSy layer code that is called by the algorithm layer and in turn the PSy layer code calls the required kernels. This will be explained further in the lfric section of the tutorial.\n",
-    "\n",
-    "The nemo api takes a slightly different approach. In this case the input is the existing unmodified NEMO code. The reason for taking this approach is that the NEMO science developers do not want to radically alter their code. This approach is possible because the nemo developers follow quite strict coding rules and their code therefore has a relatively uniform structure that PSyclone is able to reason about. However, as one might expect, there are limitations. In particular the NEMO code already contains MPI parallel code (halo exchange calls etc) so PSyclone currently deals with the single node (i.e multi-core and/or accelerator) performance. This approach is explained in more detail in the NEMO section of the tutorial.\n",
     "\n",
     "If you are interested, more detailed information about PSyclone can be found in the [users guide](https://psyclone.readthedocs.io/en/stable)."
    ]
@@ -81,7 +89,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -95,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
