--- a/changelog
+++ b/changelog
@@ -494,6 +494,9 @@
 	167) PR #2209 for #2204. Add support for EQV and NEQV and fix select
 	case bug with logical comparisons.
 
+	168) PR #2211 for #2183. Change PSyAD test-harness generation to use
+	the same variable names as the TL kernel being tested.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
