--- a/changelog
+++ b/changelog
@@ -497,6 +497,9 @@
 	168) PR #2211 for #2183. Change PSyAD test-harness generation to use
 	the same variable names as the TL kernel being tested.
 
+	169) PR #2212 for #2203. Fix bug in PSyIR fparser2 frontend when
+	DO WHILE contains normal DO loops.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
