--- a/changelog
+++ b/changelog
@@ -503,6 +503,9 @@
 	170) PR #2220 for #2219. Adds 'shared_with' argument to the
 	node.ancestor() method.
 
+	171) PR #2174 for #2171. Add support for obtaining the partial datatype
+	of an UnknownFortranType.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
