--- a/changelog
+++ b/changelog
@@ -506,6 +506,9 @@
 	171) PR #2174 for #2171. Add support for obtaining the partial datatype
 	of an UnknownFortranType.
 
+	172) PR #2163 for #1537. Support array-slicing notation in SymPy
+	comparisons.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
