--- a/changelog
+++ b/changelog
@@ -509,6 +509,9 @@
 	172) PR #2163 for #1537. Support array-slicing notation in SymPy
 	comparisons.
 
+	173) PR #2221 for #2214. Fix names of invokes containing a single
+	kernel in the PSyIR of the LFRic Alg layer.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
