--- a/changelog
+++ b/changelog
@@ -512,6 +512,9 @@
 	173) PR #2221 for #2214. Fix names of invokes containing a single
 	kernel in the PSyIR of the LFRic Alg layer.
 
+	174) PR #2225 for #2224. Fix erroneous CI link check error by
+	omitting test for the particular link.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
