--- a/changelog
+++ b/changelog
@@ -520,6 +520,9 @@
 
 	176) PR #2227 for #2226. Adds new Node.path_from(ancestor) method.
 
+	177) PR #2158 for #81. Ensures all example/test Fortran code for
+	LFRic follows the LFRic naming convention.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
