--- a/changelog
+++ b/changelog
@@ -538,6 +538,9 @@
 	consider that UnresolvedInterface symbols can come from the body of
 	a Fortran Interface.
 
+	182) PR #2240 for #2234. Fix WhileLoop issue in the NEMO OpenACC kernels
+	script.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
