--- a/changelog
+++ b/changelog
@@ -541,6 +541,9 @@
 	182) PR #2240 for #2234. Fix WhileLoop issue in the NEMO OpenACC kernels
 	script.
 
+	183) PR #2182 for #2179. Fix LFRic eg14 nvfortran compilation and add
+	nvfortran examples and tutorials steps in the Integration tests. 
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
