--- a/changelog
+++ b/changelog
@@ -544,6 +544,10 @@
 	183) PR #2182 for #2179. Fix LFRic eg14 nvfortran compilation and add
 	nvfortran examples and tutorials steps in the Integration tests. 
 
+	184) PR #2250 for #2248 and #1575. Fixes bug in line-length limiter
+	to prevent it breaking a line before the first non-whitepsace
+	character.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
