--- a/changelog
+++ b/changelog
@@ -548,6 +548,8 @@
 	to prevent it breaking a line before the first non-whitepsace
 	character.
 
+	185) PR #2262 towards #446. Implement reference_access for Call nodes.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
