--- a/changelog
+++ b/changelog
@@ -550,6 +550,8 @@
 
 	185) PR #2262 towards #446. Implement reference_access for Call nodes.
 
+	186) PR #2184 for #2166. Adds Sympy support for user-defined types.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
