--- a/changelog
+++ b/changelog
@@ -552,6 +552,9 @@
 
 	186) PR #2184 for #2166. Adds Sympy support for user-defined types.
 
+	187) PR #2270 for #1575. Fixes the line-length limiter for code that
+	has an indent greater than the max. line length.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
