--- a/changelog
+++ b/changelog
@@ -561,6 +561,10 @@
 	189) PR #2276 for #2274. Small fixes for various complaints
 	produced by latest version of pycodestyle.
 
+	190) PR #2291 for #2290. Bug fix to KernelModuleInlineTrans -
+	ensures that the new RoutineSymbol added to the Container is given
+	a DefaultModuleInterface.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
