--- a/changelog
+++ b/changelog
@@ -565,6 +565,10 @@
 	ensures that the new RoutineSymbol added to the Container is given
 	a DefaultModuleInterface.
 
+	191) PR #2238 for #2234. Adds support for a generic interface to
+	perform variable comparison when the datatype is unknown. (Required
+	for canonicalising SELECT CASE constructs.)
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
