--- a/changelog
+++ b/changelog
@@ -569,6 +569,9 @@
 	perform variable comparison when the datatype is unknown. (Required
 	for canonicalising SELECT CASE constructs.)
 
+	192) PR #2292 for #2288. Workaround for Sphinx-doctest bug by
+	building html dev guide before running the doctests.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
