--- a/changelog
+++ b/changelog
@@ -587,6 +587,9 @@
 
 	197) PR #2281 for #2258. Adds a PSyData wrapper for the TAU profiler.
 
+	198) PR #2283 for #2282 and #2286. Adds a get_ubound_expression
+	method to ArrayMixin (analagous to get_lbound_expression).
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
