--- a/changelog
+++ b/changelog
@@ -590,6 +590,8 @@
 	198) PR #2283 for #2282 and #2286. Adds a get_ubound_expression
 	method to ArrayMixin (analagous to get_lbound_expression).
 
+	199) PR #2293 for #2301. Add 'is_independent' property/query to Loop.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
