--- a/changelog
+++ b/changelog
@@ -596,6 +596,8 @@
 
 	201) PR #2148 towards #2105. Adds {Min,Max}Val2Code transformations.
 
+	202) PR 2298 for #1987. Change all intrinsic Operations to IntrinsicCalls.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
