--- a/changelog
+++ b/changelog
@@ -600,6 +600,8 @@
 
 	203) PR #2320 for #2242. Pin Sphinx dependency to <7 to fix RTD building step.
 
+	204) PR #2264 for #2263. Split LFRicScalarArgs from src/psyclone/dynamo0p3.py.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
