--- a/changelog
+++ b/changelog
@@ -604,6 +604,10 @@
 
 	205) PR #2328 for #2316. Update PSyclone to use 0.1.3 of fparser.
 
+	206) PR #2329 towards #2204 and closes #2315. Bug fix to fparser2
+	frontend to ensure that a PROGRAM with a CONTAINS is captured as
+	a CodeBlock.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
