--- a/changelog
+++ b/changelog
@@ -613,6 +613,9 @@
 	Also extends the integration tests to upload performance numbers
 	to a GitHub gist.
 
+	208) PR #2154 for #95 and #994. Enforce valid Fortran names for
+	invoke names in the LFRic API.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
