--- a/changelog
+++ b/changelog
@@ -616,6 +616,9 @@
 	208) PR #2154 for #95 and #994. Enforce valid Fortran names for
 	invoke names in the LFRic API.
 
+	209) PR #2332 for #2318. Small bug fix to the LFRic extraction
+	driver creation. eg17/full_example_extract now builds and runs OK.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
