--- a/changelog
+++ b/changelog
@@ -619,6 +619,9 @@
 	209) PR #2332 for #2318. Small bug fix to the LFRic extraction
 	driver creation. eg17/full_example_extract now builds and runs OK.
 
+	210) PR #2287 for #2253. Allow for GH_WRITE access to continuous
+	field arguments to inter-grid kernels in the LFRic API.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
