--- a/changelog
+++ b/changelog
@@ -625,6 +625,8 @@
 	211) PR #2299 for #2297. Add option to get original symbol name
 	(for an imported symbol) in VariablesAccessInfo.
 
+	212) PR #2233 for #1772. Correct kernel metadata for LFRic adjoint code.
+
 release 2.3.1 17th of June 2022
 
 	1) PR #1747 for #1720. Adds support for If blocks to PSyAD.
