--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+
+release 2.4.0 29th of September 2023
+
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
 	standalone module to remove dependence on infrastructure for
 	driver code.
