--- a/changelog
+++ b/changelog
@@ -11,6 +11,9 @@
 	4) PR #1822 towards #1338. Adds support for the OMP tasking
 	directive and transformation.
 
+	5) PR #2346 for #2345. Make the integration tests use a parametrised
+	version of python, currently 3.11.4.
+	
 release 2.4.0 29th of September 2023
 
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
