--- a/changelog
+++ b/changelog
@@ -11,7 +11,7 @@
 	4) PR #1822 towards #1338. Adds support for the OMP tasking
 	directive and transformation.
 
-	5) PR #2346 for #2345. Make the integration tests use a parametrised
+	5) PR #2346 for #2345. Make the integration tests use a parameterised
 	version of python, currently 3.11.4. Pin pylint to < 3.0
 	
 release 2.4.0 29th of September 2023
