--- a/changelog
+++ b/changelog
@@ -20,6 +20,9 @@
 	7) PR #2355 for #2347. Adds testing to demonstrate that the new LFRic
 	metadata handling works for multi-precision kernels.
 
+	8) PR #2342 for #2340. Fix issues with VERIFY, ISHFTC and PRECISION
+	intrinsics and introduce a NEMO passthrough test.
+
 release 2.4.0 29th of September 2023
 
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
