--- a/changelog
+++ b/changelog
@@ -23,6 +23,9 @@
 	8) PR #2342 for #2340. Fix issues with VERIFY, ISHFTC and PRECISION
 	intrinsics and introduce a NEMO passthrough test.
 
+	9) PR #2350 for #2349. Update to HEAD of fparser master to get
+	fparser1 fix for parsing WHERE.
+
 release 2.4.0 29th of September 2023
 
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
