--- a/changelog
+++ b/changelog
@@ -26,6 +26,8 @@
 	9) PR #2350 for #2349. Update to HEAD of fparser master to get
 	fparser1 fix for parsing WHERE.
 
+	10) PR #2285 for #2284. Split LFRicRunTimeChecks from dynamo0p3.py.
+
 release 2.4.0 29th of September 2023
 
 	1) PR #1758 for #1741. Splits the PSyData read functionality into a
